--- a/config/gazebo_drone/gazebo_drone_config.yaml
+++ b/config/gazebo_drone/gazebo_drone_config.yaml
@@ -3,7 +3,7 @@
 #common parameters
 imu_topic: "/hummingbird/vi_sensor/imu"
 image_topic: "/hummingbird/vi_sensor/left/image_raw"
-output_path: "/home/catin_vins/"
+output_path: "/home/ubuntu/catkin_vins/src/VINS-Mono/output"
 
 #camera calibration 
 model_type: PINHOLE
@@ -22,7 +22,7 @@ projection_parameters:
    cy: 2.481e+02
 
 # Extrinsic parameter between IMU and Camera.
-estimate_extrinsic: 2   # 0  Have an accurate extrinsic parameters. We will trust the following imu^R_cam, imu^T_cam, don't change it.
+estimate_extrinsic: 1   # 0  Have an accurate extrinsic parameters. We will trust the following imu^R_cam, imu^T_cam, don't change it.
                         # 1  Have an initial guess about extrinsic parameters. We will optimize around your initial guess.
                         # 2  Don't know anything about extrinsic parameters. You don't need to give R,T. We will try to calibrate it. Do some rotation movement at beginning.                        
 #If you choose 0 or 1, you should write down the following matrix.
@@ -31,15 +31,15 @@ extrinsicRotation: !!opencv-matrix
    rows: 3
    cols: 3
    dt: d
-   data: [0.0148655429818, -0.999880929698, 0.00414029679422,
-           0.999557249008, 0.0149672133247, 0.025715529948, 
-           -0.0257744366974, 0.00375618835797, 0.999660727178]
+   data: [0.00692967,    0.159038,    0.987248,
+          -0.998756,    0.049857, -0.00102113,
+          -0.0493836,   -0.986013,    0.159186]
 #Translation from camera frame to imu frame, imu^T_cam
 extrinsicTranslation: !!opencv-matrix
    rows: 3
    cols: 1
    dt: d
-   data: [-0.0216401454975,-0.064676986768, 0.00981073058949]
+   data: [ -6.0392099022977722e-02, -2.8902068546110965e-02, 5.1275029390801974e-02 ]
 
 #feature traker paprameters
 max_cnt: 150            # max feature number in feature tracking
@@ -64,9 +64,9 @@ g_norm: 9.81007     # gravity magnitude
 
 #loop closure parameters
 loop_closure: 1                    # start loop closure
-load_previous_pose_graph: 0        # load and reuse previous pose graph; load from 'pose_graph_save_path'
+load_previous_pose_graph: 1        # load and reuse previous pose graph; load from 'pose_graph_save_path'
 fast_relocalization: 0             # useful in real-time and large project
-pose_graph_save_path: "/home/tony-ws1/output/pose_graph/" # save and load path
+pose_graph_save_path: "/home/ubuntu/catkin_vins/src/VINS-Mono/output/" # save and load path
 
 #unsynchronization parameters
 estimate_td: 0                      # online estimate time offset between camera and imu
