--- a/vins_estimator/package.xml
+++ b/vins_estimator/package.xml
@@ -42,6 +42,8 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <run_depend>roscpp</run_depend>
+<build_depend>image_transport</build_depend>
+<run_depend>image_transport</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
