hungarian and matches ok

--- a/vins_estimator/CMakeLists.txt
+++ b/vins_estimator/CMakeLists.txt
@@ -63,6 +63,7 @@ add_executable(vins_estimator
     src/initial/initial_ex_rotation.cpp
     src/non_max_supp/utils.cpp
     src/non_max_supp/nms.cpp
+    src/utility/Hungarian.cpp
     )
 
 add_executable(dummy_tracker
@@ -70,6 +71,6 @@ add_executable(dummy_tracker
 )
 
 
-target_link_libraries(vins_estimator ${catkin_LIBRARIES} ${OpenCV_LIBS} ${CERES_LIBRARIES}) 
+target_link_libraries(vins_estimator ${catkin_LIBRARIES} ${OpenCV_LIBS} ${CERES_LIBRARIES} ) 
 target_link_libraries(dummy_tracker ${catkin_LIBRARIES} ${OpenCV_LIBS} ${CERES_LIBRARIES}) 
 
